<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/list_item_elevation"
    android:background="@drawable/list_item">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/list_item_padding">

        <LinearLayout
            android:id="@+id/home_team"
            android:layout_width="@dimen/team_section_width"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:src="@drawable/manchester_united"
                android:id="@+id/home_crest" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/team_name_text_size"
                android:gravity="center"
                android:textColor="@color/primary_text"
                tools:text="@string/team_manchester_united"
                android:id="@+id/home_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:text="2 - 4"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/score_text_size"
                android:id="@+id/score_textview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:text="@string/test_text"
                android:textColor="@color/secondary_text"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/data_textview" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/away_team"
            android:layout_width="@dimen/team_section_width"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/away_crest"
                tools:src="@drawable/arsenal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/primary_text"
                tools:text="@string/team_arsenal"
                android:textSize="@dimen/team_name_text_size"
                android:id="@+id/away_name" />
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_fragment_container"></FrameLayout>
</LinearLayout>


