<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/list_item"
    android:elevation="@dimen/list_item_elevation"
    card_view:cardCornerRadius="6dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/list_item_padding">

        <LinearLayout
            android:layout_width="@dimen/team_section_width"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/widget_home_crest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:src="@drawable/manchester_united" />

            <TextView
                android:id="@+id/widget_home_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/apptheme_primary_text_black"
                android:textSize="@dimen/team_name_text_size"
                tools:text="@string/team_manchester_united" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_score"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/apptheme_secondary_text_grey"
                android:textSize="@dimen/score_text_size"
                tools:text="2 - 4" />

            <TextView
                android:id="@+id/widget_match_time"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/apptheme_secondary_text_grey"
                tools:text="@string/test_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/team_section_width"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/widget_away_crest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:src="@drawable/arsenal" />

            <TextView
                android:id="@+id/widget_away_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/apptheme_primary_text_black"
                android:textSize="@dimen/team_name_text_size"
                tools:text="@string/team_arsenal" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>


